--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <title>Título da página</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+   <h1>
   Hello Yasmin
 </h1>
+  </body>
+</html>
+
